# fastapi-template

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: config.py  context.py  logging.py
app/scripts/: dev_server.py
